fix(cloud): 解决springcloud模式下 文件下载可能失败的问题